# basic-wake-on-lan-api

./: Cargo.toml  Jenkinsfile  README.md
src/: handlers.rs  magic_packet_sender.rs  main.rs  request_dto.rs
