[package]
name = "basic-wake-on-lan-api"
version = "0.1.0"
authors = ["Jan W."]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wake-on-lan = "0.2.0"
actix-web = "3"
wake-on-lan-mac-address = { git = "https://github.com/open0x20/wake-on-lan-mac-address", branch = "feature/initial_solution" }