[package]
name = "basic-wake-on-lan-api"
version = "0.1.0"
authors = ["DependencyInversion <wennmann@protonmail.com>"]
edition = "2018"

[[bin]]
name = "basic_wake_on_lan_api"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 's'
panic = 'abort'
debug = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wake-on-lan = "0.2.0"
actix-web = "3"
wake-on-lan-mac-address = { git = "https://github.com/open0x20/wake-on-lan-mac-address", branch = "develop" }